<resources>
    <string name="app_name">LK-Heads-up</string>
    <string name="btn_prueba">PRUEBA</string>
    <string name="btn_Animales">Animales</string>
    <string name="btn_Frutas">Frutas</string>
    <string name="btn_EleccionesFallidasRD">Elecciones Fallidas RD</string>
    <string name="textViewCategorias">Categorías</string>
    <string name="textViewPalabras">Palabra</string>
    <string name="textViewMensajeAlerta">COLOCA EL CELULAR EN TU FRENTE</string>
    <string name="textViewTiempoAlerta">5</string>
    <string name="textViewTiempoPalabras">1 Min</string>
    <string name="textViewGameOver">Game Over</string>
    <string name="btn_JugarDeNuevo">Volver a Categorias</string>
    <string name="btn_VerResultados">Ver Resultados</string>
    <string name="textViewResults">Resultados</string>
</resources>
