<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameOverActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A8251B"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="40dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textViewMensajeAlerta"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:fontFamily="sans-serif-black"
                android:text="@string/textViewGameOver"
                android:textAlignment="center"
                android:textColor="#EEEDF1"
                android:textSize="50dp"
                android:textStyle="bold">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="40dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/textViewJugarDeNuevo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FF8880"
                android:fontFamily="serif"
                android:onClick="llamarViewMainActivity"
                android:text="@string/btn_JugarDeNuevo"
                android:textAlignment="center"
                android:textColor="#09021A"
                android:textSize="35dp"
                android:textStyle="bold">


            </Button>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="40dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_VerResultados"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="serif"
                android:onClick="llamarViewResultsActivity"
                android:text="@string/btn_VerResultados"
                android:textAlignment="center"
                android:background="#FF8880"
                android:textColor="#04010C"
                android:textSize="40dp"
                android:textStyle="bold">

            </Button>


        </LinearLayout>

    </LinearLayout>


</RelativeLayout>