<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#DDB5E4"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/StackContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#DDB5E4"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/inside1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#DDB5E4"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewCategorias"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="cursive"
                    android:text="@string/textViewCategorias"
                    android:textAlignment="center"
                    android:textColor="#05000F"
                    android:textSize="50dp"
                    android:textStyle="bold">

                </TextView>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/inside2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:background="#DDB5E4"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnAnimales"
                    android:layout_width="130dp"
                    android:layout_height="200dp"

                    android:layout_marginHorizontal="30dp"
                    android:layout_marginVertical="30dp"

                    android:background="#9370db"
                    android:fontFamily="serif"

                    android:onClick="llamarView"
                    android:text="@string/btn_Animales"
                    android:textColor="#F8F1F3"
                    android:textStyle="bold">


                </Button>

                <Button
                    android:id="@+id/btnFrutas"

                    android:layout_width="130dp"
                    android:layout_height="200dp"

                    android:layout_marginHorizontal="30dp"
                    android:layout_marginVertical="30dp"
                    android:background="#9370db"
                    android:fontFamily="serif"

                    android:onClick="llamarView"
                    android:text="@string/btn_Frutas"
                    android:textColor="#EFEDF0"
                    android:textStyle="bold">


                </Button>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/inside3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:background="#DDB5E4"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnEleccionesFallidasRD"
                    android:layout_width="130dp"
                    android:layout_height="200dp"

                    android:layout_marginHorizontal="30dp"
                    android:layout_marginVertical="30dp"

                    android:background="#9370db"
                    android:fontFamily="serif"

                    android:onClick="llamarView"
                    android:text="@string/btn_EleccionesFallidasRD"
                    android:textColor="#F3F1F3"
                    android:textStyle="bold">


                </Button>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>